--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,17 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/breakpoints';
+@import './utils/null';
+@import './utils/variables';
+@import './utils/common';
+
+@import './components/hero';
+@import './components/header';
+@import './components/products';
+@import './components/about';
+@import './components/advantages';
+@import './components/gallery';
+@import './components/reviews';
+@import './components/contacts';
+@import './components/footer';
