--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -54,3 +54,11 @@ body {
     font-size: 30px;
   }
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
