--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<secton class="footer">
+<footer class="footer">
     <div class="container">
         <h3 class="footer__pre-title label">HOMEMADE ICE CREAM MADE</h3>
         <h2 class="footer__title title">WITH PASSION</h2>
@@ -31,4 +31,4 @@
         </div>
         <p class="footer__rights">&copy; 2019 - IceCream. All Rights Reserved.</p>
     </div>
-</secton>
+</footer>
