--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,9 +5,12 @@
         <ul class="product-list">
              <li class="products-item card-1">
                 <h3 class="product-title">ice cream</h3>
+                <div class="dots">
+                    <span class="dot"></span>
+                </div>
                 <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
-                <button type="button" class="products-button"></button>
+                <button type="button" class="products-button"><img src="./images/common/prod-arrow@1x.png" alt=""></button>
             </li>
             <li class="products-item card-2">
                 <h3 class="product-title">ice coffee</h3>
