--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -9,8 +9,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 440 px;
+  height: 440px;
   overflow: hidden;
+  pointer-events: none;
 }
 
 .hero__circle {
@@ -43,7 +44,7 @@
 }
 
 .hero__content {
-  margin-top: 130 px;
+  margin-top: 130px;
   position: relative;
 }
 
