--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -26,7 +26,7 @@
                 Made With</br>
                 <span class="hero__title--accent">Passion</span>
         </h1>
-        <a class="hero__link" href="">Products</a>
-        <a class="hero__link" href="">How it's made</a>
+        <a class="hero__link" href="#products">Products</a>
+        <a class="hero__link" href="#about">How it's made</a>
     </div>    
 </section>
