--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -45,9 +45,27 @@
                 </li>
             </ul>
             
-            <button class="about__button">
+            <button class="discription__button">
                 Read more
+                <img class="about-button__arrow" 
+                src="./images/common/vector_2.png" 
+                alt="arrow">
             </button>
+
+            <picture class="discription__picture">
+                <source 
+                srcset="./images/desktop/d-about-milk@1x.png 1x,
+                ./images/desktop/d-about-milk@2x.png 2x" 
+                media="(min-width:1200px)"/>
+
+                <source 
+                srcset="./images/mobile/m-about-milk@1x.png 1x,
+                ./images/mobile/m-about-milk@2x.png 2x" 
+                media="(max-width:767px)"/>
+
+                <img src="./images/desktop/d-about-milk@1x.png" 
+                alt="milk">
+            </picture>
         </div>
     </div>
 </section>
