--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -51,6 +51,7 @@
 .hero__title {
   font-family: 'Titan One', sans-serif;
   font-size: 26px;
+  font-weight: 400;
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
