--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,26 +1,51 @@
-<section class="section-products">
+<section class="products">
     <div class="container">
         <p class="label">100% natural</p>
-        <h2 class="title main-title-products">products</h2>
+        <h2 class="title products__main-title">products</h2>
         <ul class="product-list">
-             <li class="products-item card-1">
-                <h3 class="product-title">ice cream</h3>
-                <div class="dots">
-                    <span class="dot"></span>
+             <li class="product-list__item card-1">
+                <h3 class="product-list__title">ice cream</h3>
+                <div class="product-list__dots">
+                    <span class="product-list__dot"></span>
                 </div>
-                <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
+                <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
-                <button type="button" class="products-button"><img src="./images/common/prod-arrow@1x.png" alt=""></button>
+                <button type="button" class="product-list__button">
+                    <img 
+                    srcset="./images/common/prod-arrow@1x.png 1x, 
+                    ./images/common/prod-arrow@2x.png 2x "
+                    src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
+                </button>
             </li>
-            <li class="products-item card-2">
-                <h3 class="product-title">ice coffee</h3>
-                <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
+            <li class="product-list__item card-2">
+                <h3 class="product-list__title">ice coffee</h3>
+                <div class="product-list__dots">
+                    <span class="product-list__dot"></span>
+                </div>
+                <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
+                <button type="button" class="product-list__button">
+                    <img 
+                    srcset="./images/common/prod-arrow@1x.png 1x, 
+                    ./images/common/prod-arrow@2x.png 2x " 
+                    src="./images/common/prod-arrow@1x.png" alt="кнопка"
+                    width="40" height="40">
+                </button>
             </li>
-            <li class="products-item card-3">
-                <h3 class="product-title">milkshakes</h3>
-                <p class="product-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
+            <li class="product-list__item card-3">
+                <h3 class="product-list__title">milkshakes</h3>
+                <div class="product-list__dots">
+                    <span class="product-list__dot"></span>
+                </div>
+                <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
+                <button type="button" class="product-list__button">
+                <img 
+                srcset="./images/common/prod-arrow@1x.png 1x, 
+                ./images/common/prod-arrow@2x.png 2x " 
+                src="./images/common/prod-arrow@1x.png" alt="кнопка"
+                width="40" height="40">
+                </button>
             </li>
         </ul>
     </div>
