add BEM section Advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,24 +1,24 @@
-<section class="advantages">
+<section class="advantages" id="Advantages">
   <div class="advantages-container">
     <div class="container">
       <h1 class="visually-hidden">Advantages</h1>
-      <ul class="advantages-list">
-        <li class="advantages-list__item">
-          <h3 class="title">721</h3>
-          <p class="advantages-list__item-text">
+      <ul class="advantages-row">
+        <li class="advantages__item">
+          <h3 class="advantages__title title">721</h3>
+          <p class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
           </p>
         </li>
-        <li class="advantages-list__item">
-          <h3 class="title">16kg</h3>
-          <p class="advantages-list__item-text">
+        <li class="advantages__item">
+          <h3 class="advantages__title title">16kg</h3>
+          <p class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
           </p>
         </li>
 
-        <li class="advantages-list__item">
-          <h3 class="title">84</h3>
-          <p class="advantages-list__item-text">
+        <li class="advantages__item">
+          <h3 class="advantages__title title">84</h3>
+          <p class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
           </p>
         </li>
