section advantage +ID

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages" id="Advantages">
+<section class="advantages" id="advantages">
   <div class="advantages-container">
     <div class="container">
       <h1 class="visually-hidden">Advantages</h1>
