products tried to describe

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -31,6 +31,15 @@
                     src="./images/common/prod-arrow@1x.png" alt="кнопка"
                     width="40" height="40">
                 </button>
+                <!-- <p class="overlay__text product-list__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus iste quia voluptatibus nemo atque tempora molestias numquam, possimus vero mollitia labore veritatis deleniti iusto quos at doloribus accusamus vel commodi id, eligendi doloremque esse, veniam laboriosam qui? Quod veritatis ducimus dolorum ratione, aspernatur quidem, necessitatibus reiciendis soluta delectus tenetur quas illum saepe modi voluptatum quis.
+                    <button type="button" class="overlay__close"></button>
+                </p> -->
+                <!-- <div class="overlay" data-modal>
+                    <div class="overlay__text product-list__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptas cum expedita labore quos ducimus, libero eum nemo sed aspernatur molestias, qui fugiat, iure debitis dignissimos reprehenderit molestiae asperiores rem! Hic, inventore! Id veritatis minima, autem ut obcaecati distinctio explicabo illum dignissimos, quasi corrupti eveniet facere perferendis impedit vel? A, itaque? Consequatur fugit libero animi impedit quae! Vero, cum quo?
+                        
+                        <button type="button" class="overlay__close" data-modal-close></button>
+                    </div>                        
+                </div> -->
             </li>
             <li class="product-list__item card-3">
                 <h3 class="product-list__title">milkshakes</h3>
