--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -115,6 +115,36 @@
   }
 }
 
+// .overlay__text {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   padding-top: 35px;
+//   height: 100%;
+//   border-radius: 24px;
+//   // background-color: red;
+//   background-color: rgba(230, 198, 152, 0.89);
+//   // transform: translate(100%);
+// }
+
+// .overlay__close {
+//   position: absolute;
+//   top: 20px;
+//   right: 20px;
+//   display: block;
+//   width: 16px;
+//   height: 16px;
+//   background-color: #ffffff;
+//   border: transparent;
+//   border-radius: 50%;
+// }
+
+// .is-hidden {
+//   opacity: 0;
+//   visibility: hidden;
+//   pointer-events: none;
+// }
+
 .product-list__button {
   background: transparent;
   border: 0;
