--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -16,7 +16,7 @@
 
 .swiper {
   width: 100%;
-  height: 520px;
+  height: 580px;
 }
 .slider-item {
   width: 100%;
@@ -24,7 +24,7 @@
   background-color: transparent;
 }
 .swiper-pagination-bullet-active {
-  //   background-image: url(../src/images/common/house.svg);
+  background-image: url(../images/common/house.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
@@ -39,7 +39,10 @@
 }
 .review__thumb {
   position: relative;
+  width: 157px;
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 71px;
   padding-bottom: 20px;
   padding-right: 50px;
@@ -47,10 +50,14 @@
   font-size: 12px;
   line-height: 2.583;
   text-align: center;
+
   color: #000000;
   background-color: #fafafa;
 }
 .review__text {
+  z-index: 10;
+  display: block;
+  position: relative;
   background-image: repeating-linear-gradient(
     to bottom,
     transparent 0px,
@@ -65,14 +72,14 @@
 }
 .review__thumb::before {
   position: absolute;
-  left: 50px;
-  top: 32px;
+  left: 60px;
+  top: 52px;
   content: '';
   display: block;
   width: 54px;
   height: 40px;
-  z-index: 5;
-  //   background-image: url(../src/images/common/symbol.svg);
+  //   z-index: 2;
+  background-image: url(../images/common/symbol.svg);
 }
 .reviews-dots {
   margin-bottom: 0;
