--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -2,6 +2,11 @@
   position: relative;
   height: 502px;
   background-color: $bg-three;
+  @media screen and (min-width: $tablet) {
+    height: 399px;
+    background-color: $bg-three;
+    padding: 37px 0 28px 0;
+  }
 }
 
 .hero__section {
@@ -12,6 +17,9 @@
   height: 440px;
   overflow: hidden;
   pointer-events: none;
+  @media screen and (min-width: $tablet) {
+    height: 100%;
+  }
 }
 
 .hero__circle {
@@ -22,6 +30,12 @@
   height: 344px;
   background: $text-four;
   border-radius: 50%;
+  @media screen and (min-width: $tablet) {
+    width: 324px;
+    height: 322px;
+    bottom: 46px;
+    left: calc(50% - 90px);
+  }
 }
 
 .hero__icecream {
@@ -41,11 +55,27 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/mobile/m-hero-ice@2x.png);
   }
+  @media screen and (min-width: $tablet) {
+    width: 143px;
+    height: 336px;
+    left: calc(50% - 6px);
+    background-image: url(../images/tablet/t-hero-ice@1x.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/tablet/t-hero-ice@2x.png);
+    }
+  }
 }
 
 .hero__content {
   margin-top: 130px;
   position: relative;
+  @media screen and (min-width: $tablet) {
+    margin-top: 15px;
+  }
 }
 
 .hero__title {
@@ -57,6 +87,9 @@
   text-transform: uppercase;
   color: $text-two;
   z-index: 50;
+  @media screen and (min-width: $tablet) {
+    font-size: 22px;
+  }
 }
 
 .hero__title--accent {
@@ -64,6 +97,134 @@
   font-size: 48px;
   line-height: 1;
   color: $text-accent;
+  @media screen and (min-width: $tablet) {
+    font-size: 34px;
+  }
+}
+
+.hero__milk {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: block;
+    position: absolute;
+    bottom: 28px;
+    left: calc(50% - 340px);
+    width: 124px;
+    height: 126px;
+    background-image: url(../images/tablet/t-hero-milk@1x.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/tablet/t-hero-milk@2x.png);
+    }
+  }
+}
+
+.hero__text {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: block;
+    width: 114px;
+    margin: 66px 0 0 124px;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.5;
+    color: $text-two;
+
+    & img {
+      width: 18px;
+      height: 18px;
+      margin-top: 7px;
+    }
+  }
+}
+
+.hero__person {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: block;
+    width: 168px;
+    height: 133px;
+    position: absolute;
+    right: calc(50% - 340px);
+    bottom: 0;
+    background-image: url(../images/tablet/t-hero-girl@1x.png);
+    background-color: transparent;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/tablet/t-hero-girl@2x.png);
+    }
+  }
+}
+
+.counts {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 51px;
+    height: 100px;
+    position: absolute;
+    right: calc(50% - 340px);
+    top: 94px;
+  }
+}
+
+.counts__item {
+  @media screen and (min-width: $tablet) {
+    position: relative;
+    z-index: 1;
+    width: 43px;
+    &::after {
+      content: '';
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background-color: $bg-one;
+      position: absolute;
+      top: 0;
+      right: -8px;
+      z-index: -1;
+    }
+  }
+}
+
+.counts__number {
+  @media screen and (min-width: $tablet) {
+    display: block;
+
+    font-family: 'Titan One', sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 1.14;
+    text-align: right;
+    letter-spacing: 0.04em;
+    color: $text-accent;
+  }
+}
+
+.counts__type {
+  @media screen and (min-width: $tablet) {
+    display: block;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.25;
+    text-align: right;
+    color: $text-two;
+  }
 }
 
 .hero__link {
