--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -58,8 +58,8 @@
                 Made With</br>
                 <span class="hero__title--accent">Passion</span>
         </h1>
-        <a class="hero__link" href="">Products</a>
-        <a class="hero__link" href="">How it's made</a>
+        <a class="hero__link hero__link--red" data-goto=".products" href="">Products</a>
+        <a class="hero__link" data-goto=".about" href="">How it's made</a>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
             <a href="">
