--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -33,10 +33,10 @@
             </button>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li class="nav__item"><a data-goto=".hero-section" class="nav__link" href="#">Home</a></li>
-                        <li class="nav__item"><a data-goto=".gallery"class="nav__link" href="#">About us</a></li>
+                        <li class="nav__item"><a data-goto=".hero-header" class="nav__link" href="#">Home</a></li>
+                        <li class="nav__item"><a data-goto=".footer"class="nav__link" href="#">About us</a></li>
                         <li class="nav__item"><a data-goto=".about" class="nav__link" href="#">How it`s made</a></li>
-                        <li class="nav__item"><a data-goto=".advantages" class="nav__link" href="#">Our products</a></li>
+                        <li class="nav__item"><a data-goto=".products" class="nav__link" href="#">Our products</a></li>
                         <li class="nav__item"><a data-goto=".contacts" class="nav__link" href="#">Contact</a></li>
                     </ul>
                 </nav>
