fix milk splash and position for all

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -46,7 +46,7 @@
                     <img class="about-button__arrow" src="./images/common/vector_2.png" alt="arrow">
                 </button>
             </div>
-            <picture class="description__picture">
+            <!-- <picture class="description__picture">
                 <source srcset="./images/desktop/d-about-milk@1x.png 1x,
                                                                 ./images/desktop/d-about-milk@2x.png 2x"
                     media="(min-width:1200px)" />
@@ -56,7 +56,7 @@
                     media="(max-width:767px)" />
             
                 <img src="./images/desktop/d-about-milk@1x.png" alt="milk">
-            </picture>
+            </picture> -->
         </div>
     </div>
 </section>
