products-mobile almoust finish

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="products">
     <div class="container">
         <p class="label">100% natural</p>
-        <h2 class="title products__main-title">products</h2>
+        <h2 class="products__main-title title">products</h2>
         <ul class="product-list">
              <li class="product-list__item card-1">
                 <h3 class="product-list__title">ice cream</h3>
@@ -16,6 +16,13 @@
                     ./images/common/prod-arrow@2x.png 2x "
                     src="./images/common/prod-arrow@1x.png" alt="кнопка" width="40" height="40">
                 </button>
+                <div class="overlay overlay-cream is-hidden">
+                    <button type="button" class="overlay__close"></button>
+                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                        quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
+                        explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
+                </div>
             </li>
             <li class="product-list__item card-2">
                 <h3 class="product-list__title">ice coffee</h3>
@@ -31,15 +38,13 @@
                     src="./images/common/prod-arrow@1x.png" alt="кнопка"
                     width="40" height="40">
                 </button>
-                <!-- <p class="overlay__text product-list__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus iste quia voluptatibus nemo atque tempora molestias numquam, possimus vero mollitia labore veritatis deleniti iusto quos at doloribus accusamus vel commodi id, eligendi doloremque esse, veniam laboriosam qui? Quod veritatis ducimus dolorum ratione, aspernatur quidem, necessitatibus reiciendis soluta delectus tenetur quas illum saepe modi voluptatum quis.
+                <div class="overlay overlay-coffee is-hidden">
                     <button type="button" class="overlay__close"></button>
-                </p> -->
-                <!-- <div class="overlay" data-modal>
-                    <div class="overlay__text product-list__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptas cum expedita labore quos ducimus, libero eum nemo sed aspernatur molestias, qui fugiat, iure debitis dignissimos reprehenderit molestiae asperiores rem! Hic, inventore! Id veritatis minima, autem ut obcaecati distinctio explicabo illum dignissimos, quasi corrupti eveniet facere perferendis impedit vel? A, itaque? Consequatur fugit libero animi impedit quae! Vero, cum quo?
-                        
-                        <button type="button" class="overlay__close" data-modal-close></button>
-                    </div>                        
-                </div> -->
+                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                        quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
+                        explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
+                </div>
             </li>
             <li class="product-list__item card-3">
                 <h3 class="product-list__title">milkshakes</h3>
@@ -55,6 +60,13 @@
                 src="./images/common/prod-arrow@1x.png" alt="кнопка"
                 width="40" height="40">
                 </button>
+                <div class="overlay overlay-shake is-hidden">
+                    <button type="button" class="overlay__close"></button>
+                    <p class="overlay__text product-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum pariatur
+                        quis commodi asperiores qui id, aliquid tempore possimus magni ullam impedit ipsa maiores error tenetur? Neque
+                        explicabo necessitatibus porro nobis voluptates harum iste optio, ipsa ratione, totam tempora placeat suscipit
+                        saepe quasi ipsum laudantium exercitationem ducimus doloribus voluptatem aperiam eaque.</p>
+                </div>
             </li>
         </ul>
     </div>
