--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -4,32 +4,33 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  @media screen and (min-width: $tablet) {
-    padding-top: 122px;
-    padding-bottom: 112px;
-  }
-  @media screen and (min-width: $desktop) {
-    padding-top: 127px;
-    padding-bottom: 119px;
-  }
+  // @media screen and (min-width: $tablet) {
+  //   padding-top: 122px;
+  //   padding-bottom: 112px;
+  // }
+  // @media screen and (min-width: $desktop) {
+  //   padding-top: 127px;
+  //   padding-bottom: 119px;
+  // }
 }
 
 .products__main-title {
   margin-bottom: 144px;
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 150px;
-  }
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 259px;
-  }
+  text-align: center;
+  // @media screen and (min-width: $tablet) {
+  //   margin-bottom: 150px;
+  // }
+  // @media screen and (min-width: $desktop) {
+  //   margin-bottom: 259px;
+  // }
 }
 
-.product-list {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    margin-right: -20px;
-  }
-}
+// .product-list {
+//   @media screen and (min-width: $tablet) {
+//     display: flex;
+//     margin-right: -20px;
+//   }
+// }
 
 .product-list__item {
   position: relative;
@@ -42,16 +43,17 @@
   &:last-child {
     margin-bottom: 0px;
   }
-  @media screen and (min-width: $tablet) {
-    margin-right: 20px;
-    margin-bottom: 0px;
-  }
+  // @media screen and (min-width: $tablet) {
+  //   margin-right: 20px;
+  //   margin-bottom: 0px;
+  // }
   &::before {
     content: '';
     width: 249px;
     height: 252px;
     display: block;
     position: absolute;
+    z-index: 1;
     left: 16px;
     bottom: 346px;
     background-size: contain;
@@ -115,35 +117,50 @@
   }
 }
 
-// .overlay__text {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   padding-top: 35px;
-//   height: 100%;
-//   border-radius: 24px;
-//   // background-color: red;
-//   background-color: rgba(230, 198, 152, 0.89);
-//   // transform: translate(100%);
-// }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 150px;
+  height: 100%;
+  border-radius: 24px;
+  overflow: auto;
+  // transition: opacity $switch, visibility $switch;
+}
 
-// .overlay__close {
-//   position: absolute;
-//   top: 20px;
-//   right: 20px;
-//   display: block;
-//   width: 16px;
-//   height: 16px;
-//   background-color: #ffffff;
-//   border: transparent;
-//   border-radius: 50%;
-// }
+.overlay-cream {
+  background-color: #ffb8ca;
+}
 
-// .is-hidden {
-//   opacity: 0;
-//   visibility: hidden;
-//   pointer-events: none;
-// }
+.overlay-coffee {
+  background-color: #f0d1a5;
+}
+
+.overlay-shake {
+  background-color: #c2e297;
+}
+
+.overlay__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: block;
+  // margin-left: auto;
+  // margin-top: -130px;
+  // margin-right: 20px;
+  // margin-bottom: 110px;
+  width: 16px;
+  height: 16px;
+  background-color: #ffffff;
+  border: transparent;
+  border-radius: 50%;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 
 .product-list__button {
   background: transparent;
