--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -62,7 +62,7 @@
         <a class="hero__link" data-goto=".about" href="">How it's made</a>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <a href="">
+            <a href="" class="arrow">
                 <img srcset=" 
                 ./images/tablet/t-hero-arrow@1x.png 18w, 
                 ./images/tablet/t-hero-arrow@2x.png 36w, 
