--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -43,6 +43,9 @@
   &--shown {
     transform: translateX(0%);
   }
+  @media screen and (min-width: $tablet) {
+    max-width: 254px;
+  }
 }
 
 .menu__close {
