--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -3,8 +3,9 @@
   padding-bottom: 39px;
   background-color: $bg-two;
   background-image: url(../images/mobile/m-about-milk@1x.png);
-  background-position: center 754px;
+  background-position: center 88%;
   background-repeat: no-repeat;
+  background-size: contain;
 
   @media screen and (min-width: 320px) and (min-resolution: 192dpi) and (min-resolution: 2dppx) {
     background-image: url(../images/mobile/m-about-milk@2x.png);
@@ -20,8 +21,7 @@
     padding-top: 125px;
     padding-bottom: 39px;
     background-image: url(../images/desktop/d-about-milk@1x.png);
-    background-position: center 290px;
-    background-repeat: no-repeat;
+    background-position: center 106%;
   }
 
   @media screen and (min-width: 1200px) and (min-resolution: 192dpi) and (min-resolution: 2dppx) {
