--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="container">
         <h3 class="footer__pre-title label">HOMEMADE ICE CREAM MADE</h3>
         <h2 class="footer__title title">WITH PASSION</h2>
