add tablet&detop gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,48 +1,48 @@
 <section class="gallery">
     <div class="gallery__content container">
-        <h2 class="gallery__title">gallery</h2>
+        <h2 class="gallery__title visually-hidden">gallery</h2>
         <div class="gallery__items">
             <div class="gallery__item">
                 <img class="gallery__img" 
                 srcset="./images/gallery/1_foto.jpeg 1x, ./images/gallery/1_foto2x.jpeg 2x"
-                src="./images/gallery/1_foto.jpeg" alt="" width=40 >
+                src="./images/gallery/1_foto.jpeg" alt="Зелене морозово" width=40 >
             </div>
             <div class="gallery__item">
                 <img class="gallery__img" 
                 srcset="./images/gallery/2_foto.jpeg 1x, ./images/gallery/2_foto2x.jpeg 2x"
-                src="./images/gallery/2_foto.jpeg" alt="">
+                src="./images/gallery/2_foto.jpeg" alt="Рожеве морозиво кульки">
                 <img class="gallery__img"
                 srcset="./images/gallery/3_foto.jpeg 1x, ./images/gallery/3_foto2x.jpeg 2x"
-                src="./images/gallery/3_foto.jpeg" alt="">
+                src="./images/gallery/3_foto.jpeg" alt="Рожеве морозиво на палочці">
             </div>
             <div class=" gallery__item gallery__item_big ">
                 <img class="gallery__img_big "
                 srcset="./images/gallery/4_foto.jpeg 1x, ./images/gallery/4_foto2x.jpeg 2x"
-                src="./images/gallery/4_foto.jpeg" alt="">
+                src="./images/gallery/4_foto.jpeg" alt="Морозиво з квітами і ягодами">
                 <img class="gallery__img gallery__img_5"
                 srcset="./images/gallery/5_foto.jpeg 1x, ./images/gallery/5_foto2x.jpeg 2x"
-                src="./images/gallery/5_foto.jpeg" alt="">
+                src="./images/gallery/5_foto.jpeg" alt="Фіолетове морозиво">
             </div>
             <div class="gallery__item">
                 <img class="gallery__img"
                 srcset="./images/gallery/6_foto.jpeg 1x, ./images/gallery/6_foto2x.jpeg 2x"
-                src="./images/gallery/6_foto.jpeg" alt="" >
+                src="./images/gallery/6_foto.jpeg" alt="рожеве морозиво з вишнею" >
                 <img class="gallery__img"
                 srcset="./images/gallery/7_foto.jpeg 1x, ./images/gallery/7_foto2x.jpeg 2x"
-                src="./images/gallery/7_foto.jpeg" alt="">
+                src="./images/gallery/7_foto.jpeg" alt="морозиво ріжок">
             </div>
             <div class="gallery__item gallery__item_top">
                 <img class="gallery__img"
                 srcset="./images/gallery/8_foto.jpeg 1x,  ./images/gallery/8_foto2x.jpeg 2x"
-                src="./images/gallery/8_foto.jpeg" alt="">
+                src="./images/gallery/8_foto.jpeg" alt="морозиво ріжок">
                 <img class="gallery__img"
                 srcset="./images/gallery/9_foto.jpeg 1x, ./images/gallery/9_foto2x.jpeg 2x"
-                src="./images/gallery/9_foto.jpeg" alt="">    
+                src="./images/gallery/9_foto.jpeg" alt="морозиво з єдиноріг">    
             </div>
             <div class="gallery_item">
                 <img class="gallery__img"
                 srcset="./images/gallery/10_foto.jpeg 1x, ./images/gallery/10_foto2x.jpeg 2x"
-                src="./images/gallery/10_foto.jpeg" alt="">
+                src="./images/gallery/10_foto.jpeg" alt="морозиво рожеве ">
             </div>
         </div>
 </div>
